prodMetadata/src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Ethnicity__c</fullName>
        <label>Ethnicity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AMERICAN INDIAN/NATIVE AMERICAN</fullName>
                </value>
                <value>
                    <fullName>ASIAN</fullName>
                </value>
                <value>
                    <fullName>BLACK/AFRICAN AMERICAN</fullName>
                </value>
                <value>
                    <fullName>HISPANIC/LATINO</fullName>
                </value>
                <value>
                    <fullName>OTHER</fullName>
                </value>
                <value>
                    <fullName>PACIFIC ISLANDER</fullName>
                </value>
                <value>
                    <fullName>TWO OR MORE RACES</fullName>
                </value>
                <value>
                    <fullName>WHITE (NOT HISPANIC/LATINO)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Events_Attended_Last_Year__c</fullName>
        <label>Events Attended Last Year</label>
        <summaryFilterItems>
            <field>IAVAEvent_Attendee__c.Event_Year__c</field>
            <operation>equals</operation>
            <value>2015</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>IAVAEvent_Attendee__c.Attended__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </summaryFilterItems>
        <summaryForeignKey>IAVAEvent_Attendee__c.Contact__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Events_Attended_Two_Years_Ago__c</fullName>
        <label>Events Attended Two Years Ago</label>
        <summaryFilterItems>
            <field>IAVAEvent_Attendee__c.Event_Year__c</field>
            <operation>equals</operation>
            <value>2014</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>IAVAEvent_Attendee__c.Attended__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </summaryFilterItems>
        <summaryForeignKey>IAVAEvent_Attendee__c.Contact__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Events_Hosted_Last_Year__c</fullName>
        <label>Events Hosted Last Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Exists__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Exists</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expected_Date_of_Graduation__c</fullName>
        <label>Expected Date of Graduation</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Facebook_ID__c</fullName>
        <externalId>true</externalId>
        <label>Facebook ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Facebook_Link__c</fullName>
        <label>Facebook Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Family_Member_Setter__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Family Member Setter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>First_Bounce_Date__c</fullName>
        <description>Date of first bounced email</description>
        <inlineHelpText>Date of first bounced email</inlineHelpText>
        <label>First Bounce Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_COV_Login__c</fullName>
        <formula>Portal_User__r.Date_of_first_COV_login__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>First COV Login</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Five_Star_Service_Provider__c</fullName>
        <description>For StepUp</description>
        <formula>Last_Referral_Date__c &gt;TODAY()-365</formula>
        <label>Five Star Service Provider</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Full_Name__c</fullName>
        <formula>LastName  &amp; &quot;, &quot;  &amp;   FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Full Name Last First</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GI_Bill_Benefit_User__c</fullName>
        <defaultValue>false</defaultValue>
        <label>GI Bill Benefit User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Female</fullName>
                </value>
                <value>
                    <fullName>Gender Variant/Nonconforming</fullName>
                </value>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Transgender Female</fullName>
                </value>
                <value>
                    <fullName>Transgender Male</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>General_Notes__c</fullName>
        <label>General Notes / Bio</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Give_Requested_in_last_year__c</fullName>
        <formula>TODAY() &lt;  Last_Give_Request_Date__c +365</formula>
        <label>Give Requested in last year</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Go_To_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Go-To Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Opted_Out_of_Email__c</fullName>
        <formula>HasOptedOutOfEmail</formula>
        <label>Has Opted Out of Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Private_Contact_Info__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If there is anything in confidential contact information fields, which are not visible to many users, this box, which is visible to all, will be checked.</description>
        <inlineHelpText>If there is anything in confidential contact information fields, which are not visible to many users, this box, which is visible to all, will be checked.</inlineHelpText>
        <label>Has Private Contact Info</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Highest_Level_of_Education__c</fullName>
        <label>Highest Level of Education</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Did not graduate</fullName>
                </value>
                <value>
                    <fullName>High School</fullName>
                </value>
                <value>
                    <fullName>Some College</fullName>
                </value>
                <value>
                    <fullName>2 year degree</fullName>
                </value>
                <value>
                    <fullName>4 year degree</fullName>
                </value>
                <value>
                    <fullName>Masters degree</fullName>
                </value>
                <value>
                    <fullName>Ph.D. degree</fullName>
                </value>
                <value>
                    <fullName>Trade School graduate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Home_State__c</fullName>
        <label>Home State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>DC</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>NE</fullName>
                </value>
                <value>
                    <fullName>NV</fullName>
                </value>
                <value>
                    <fullName>NH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Home_Town__c</fullName>
        <label>Home Town</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hosted_a_VetTogether__c</fullName>
        <formula>NOT(ISBLANK(Last_Date_Hosting_a_VetTogether__c))</formula>
        <inlineHelpText>For StepUp: checked if contact hosted a VetTogether</inlineHelpText>
        <label>Hosted a VetTogether</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IAVA_Board_Member__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IAVA Board Member</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Injuries_Conditions__c</fullName>
        <label>Injuries/Conditions</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>TBI</fullName>
                </value>
                <value>
                    <fullName>PTSD</fullName>
                </value>
                <value>
                    <fullName>Physical Disability</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Injury_Condition_Details__c</fullName>
        <label>Injury/Condition Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Instagram_ID__c</fullName>
        <label>Instagram ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interest_in_meeting_other_members__c</fullName>
        <description>Answer to the question: Are you interested in meeting other people in your area that are committed to the veteran&apos;s community?</description>
        <inlineHelpText>Answer to the question: Are you interested in meeting other people in your area that are committed to the veteran&apos;s community?</inlineHelpText>
        <label>Interest in meeting other members</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Maybe</fullName>
                </value>
                <value>
                    <fullName>I don&apos;t know</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Interested_in_further_Involvement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Interested in further Involvement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Interests__c</fullName>
        <label>Interests</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Backlog</fullName>
                </value>
                <value>
                    <fullName>Burn Pits</fullName>
                </value>
                <value>
                    <fullName>Community building</fullName>
                </value>
                <value>
                    <fullName>COV</fullName>
                </value>
                <value>
                    <fullName>DOD</fullName>
                </value>
                <value>
                    <fullName>Employment &amp; Financial Hardship</fullName>
                </value>
                <value>
                    <fullName>Equality in the military</fullName>
                </value>
                <value>
                    <fullName>For-profit schools</fullName>
                </value>
                <value>
                    <fullName>Fundraising</fullName>
                </value>
                <value>
                    <fullName>GI Bill</fullName>
                </value>
                <value>
                    <fullName>Homelessness</fullName>
                </value>
                <value>
                    <fullName>Iraqi Interpreters</fullName>
                </value>
                <value>
                    <fullName>LGBT</fullName>
                </value>
                <value>
                    <fullName>Local Events</fullName>
                </value>
                <value>
                    <fullName>Mental Health</fullName>
                </value>
                <value>
                    <fullName>Military COLA</fullName>
                </value>
                <value>
                    <fullName>Military families</fullName>
                </value>
                <value>
                    <fullName>Military Recruitment</fullName>
                </value>
                <value>
                    <fullName>Military Sexual Trauma</fullName>
                </value>
                <value>
                    <fullName>Negative VA experience</fullName>
                </value>
                <value>
                    <fullName>New GI Bill Delays</fullName>
                </value>
                <value>
                    <fullName>Online Campaigns</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Overextended Military</fullName>
                </value>
                <value>
                    <fullName>Politics</fullName>
                </value>
                <value>
                    <fullName>Positive VA experience</fullName>
                </value>
                <value>
                    <fullName>PTSD</fullName>
                </value>
                <value>
                    <fullName>Suicide</fullName>
                </value>
                <value>
                    <fullName>Transitioning to civilian life</fullName>
                </value>
                <value>
                    <fullName>Traumatic Brain Injury</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Invited_2_people_to_events_this_year__c</fullName>
        <formula>Num_Invited_to_events__c &gt;1</formula>
        <label>Invited 2 people to events this year</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsPortalUser__c</fullName>
        <formula>IF(NOT(ISBLANK(Portal_User__c)),true,false)</formula>
        <label>Is Portal User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KW_Boss_Name__c</fullName>
        <formula>TEXT(Account.Primary_KW_Contact__r.Salutation) &amp;&quot; &quot;&amp; Account.Primary_KW_Contact__r.LastName</formula>
        <inlineHelpText>If this field is blank, go to the Office&apos;s record and add the Senator or Representative to the Office&apos;s &quot;Primary KW Contact&quot; field.</inlineHelpText>
        <label>KW Boss Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KW_Chief_of_Staff__c</fullName>
        <description>If the KnowWho Title contains Chief of Staff but not Assistant to the Chief of Staff or Deputy Chief of Staff, this field will be &quot;True&quot;</description>
        <formula>IF(
AND(CONTAINS(kw__Title__c,&quot;Chief of Staff&quot;),
(NOT(CONTAINS(kw__Title__c,&quot;Assistant Chief of Staff&quot;))), 
(NOT(CONTAINS(kw__Title__c,&quot;Assistant to the Chief of Staff&quot;))),
(NOT(CONTAINS(kw__Title__c,&quot;Deputy Chief of Staff&quot;)))),
&quot;True&quot;,&quot;&quot;)</formula>
        <inlineHelpText>If the KnowWho Title contains Chief of Staff but not Assistant to the Chief of Staff or Deputy Chief of Staff, this field will be &quot;True&quot;</inlineHelpText>
        <label>KW Chief of Staff</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KW_Comms_Director__c</fullName>
        <description>KnowWho Records with the KnowWho Title containing Communications Director but not Deputy Communications Director</description>
        <formula>IF(
AND(CONTAINS(kw__Title__c,&quot;Communications Director&quot;),
(NOT(CONTAINS(kw__Title__c,&quot;Assistant Communications Director&quot;))),
(NOT(CONTAINS(kw__Title__c,&quot;Deputy Communications Director&quot;)))),
&quot;True&quot;,&quot;&quot;)</formula>
        <inlineHelpText>KnowWho Records with the KnowWho Title containing Communications Director but not Deputy Communications Director</inlineHelpText>
        <label>KW Comms Director</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KW_IsTheMember__c</fullName>
        <description>True if the contact record is the primary Member of Congress for the Member&apos;s office.</description>
        <formula>if(  ispickval(kw__KW_Category__c, &quot;Fed Legislator&quot;)   , &quot;True&quot;, &quot;&quot;)</formula>
        <inlineHelpText>True if the contact record is the primary Member of Congress for the Member&apos;s office.</inlineHelpText>
        <label>KW IsTheMember</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KW_Leg_Assistant__c</fullName>
        <description>If KW Title contains Legislative Assistant, this will be True.</description>
        <formula>IF(CONTAINS( kw__Title__c , &quot;Legislative Assistant&quot;), &quot;True&quot;,&quot;&quot;)</formula>
        <inlineHelpText>If KW Title contains Legislative Assistant, this will be True.</inlineHelpText>
        <label>KW Leg Assistant</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KW_Leg_Director__c</fullName>
        <description>Contains Legislative Director but not Deputy Legislative or anything &quot;to the Legislative Director&quot;</description>
        <formula>IF(
AND(
CONTAINS(kw__Title__c , &quot;Legislative Director&quot;),
NOT(CONTAINS(kw__Title__c , &quot;to the Legislative Director&quot;)),
NOT(CONTAINS(kw__Title__c , &quot;Assistant Legislative Director&quot;)), 
NOT(CONTAINS(kw__Title__c , &quot;Deputy Legislative Director&quot;)))
,&quot;True&quot;,&quot;&quot;)</formula>
        <inlineHelpText>Contains Legislative Director but not Deputy Legislative or anything &quot;to the Legislative Director&quot;</inlineHelpText>
        <label>KW Leg Director</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KW_Scheduler__c</fullName>
        <description>KW Title contains Scheduler but not assistant or deputy Scheduler</description>
        <formula>IF(
AND(CONTAINS(kw__Title__c,&quot;Scheduler&quot;),
(NOT(CONTAINS(kw__Title__c,&quot;Assistant Scheduler&quot;))),
(NOT(CONTAINS(kw__Title__c,&quot;Deputy Scheduler&quot;)))),
&quot;True&quot;,&quot;&quot;)</formula>
        <inlineHelpText>KW Title contains Scheduler but not assistant or deputy Scheduler</inlineHelpText>
        <label>KW Scheduler</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Languages_Spoken__c</fullName>
        <label>Languages Spoken</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>English</fullName>
                </value>
                <value>
                    <fullName>Spanish</fullName>
                </value>
                <value>
                    <fullName>French</fullName>
                </value>
                <value>
                    <fullName>German</fullName>
                </value>
                <value>
                    <fullName>Italian</fullName>
                </value>
                <value>
                    <fullName>Arabic</fullName>
                </value>
                <value>
                    <fullName>Mandarin</fullName>
                </value>
                <value>
                    <fullName>Chinese</fullName>
                </value>
                <value>
                    <fullName>Japanese</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lapsed_Donor__c</fullName>
        <description>If the Last gift date is not this year or last year, donor is lapsed</description>
        <formula>YEAR(TODAY()) &gt; (YEAR( npo02__LastCloseDate__c ) +1)</formula>
        <label>Lapsed Donor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Activity_Date__c</fullName>
        <inlineHelpText>For StepUp - last date that a task was created</inlineHelpText>
        <label>Last Activity Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Date_Hosting_a_VetTogether__c</fullName>
        <inlineHelpText>For StepUp: Last date that contact hosted a VetTogether</inlineHelpText>
        <label>Last Date Hosting a VetTogether</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Date_as_Spokesperson_on_Press_Hit__c</fullName>
        <inlineHelpText>For StepUp</inlineHelpText>
        <label>Last Date as Spokesperson on Press Hit</label>
        <summarizedField>Press_Hits_Contacts__c.CreatedDate</summarizedField>
        <summaryFilterItems>
            <field>Press_Hits_Contacts__c.Role__c</field>
            <operation>equals</operation>
            <value>Spokesperson</value>
        </summaryFilterItems>
        <summaryForeignKey>Press_Hits_Contacts__c.Contact__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Last_Date_as_Testifier_for_DC_Event__c</fullName>
        <inlineHelpText>For StepUp</inlineHelpText>
        <label>Last Date as Testifier for DC Event</label>
        <summarizedField>DC_Event_Contact__c.CreatedDate</summarizedField>
        <summaryFilterItems>
            <field>DC_Event_Contact__c.Role__c</field>
            <operation>equals</operation>
            <value>Testifier</value>
        </summaryFilterItems>
        <summaryForeignKey>DC_Event_Contact__c.Related_Contact__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Last_Day_as_Tier_1_Spokesperson__c</fullName>
        <inlineHelpText>For StepUp: Last Day as Tier 1 Spokesperson</inlineHelpText>
        <label>Last Day as Tier 1 Spokesperson</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Email_Opened_Date__c</fullName>
        <inlineHelpText>For StepUp</inlineHelpText>
        <label>Last Email Opened Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Event_Attendance_Date__c</fullName>
        <label>Last Event Attendance Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Event_Date_with_Tracked_Attendance__c</fullName>
        <description>For Step Up</description>
        <label>Last Event Date with Tracked Attendance</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Give_Request_Date__c</fullName>
        <label>Last Give Request Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Parade_Attendance_Date__c</fullName>
        <label>Last Parade Attendance Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Referral_Date__c</fullName>
        <description>For StepUp</description>
        <label>Last Referral Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_School_Attended__c</fullName>
        <label>Last School Attended</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Story_Submission_Date__c</fullName>
        <description>For use by StepUp</description>
        <label>Last Story Submission Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_VetTogether_Attended__c</fullName>
        <label>Last VetTogether Attended</label>
        <summarizedField>IAVAEvent_Attendee__c.CreatedDate</summarizedField>
        <summaryFilterItems>
            <field>IAVAEvent_Attendee__c.Attended__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </summaryFilterItems>
        <summaryForeignKey>IAVAEvent_Attendee__c.Contact__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Latest_Major_Minor__c</fullName>
        <inlineHelpText>Values in this box were entered in a form and may not be current</inlineHelpText>
        <label>Latest Major/Minor</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Latitude__c</fullName>
        <label>Latitude</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Longitude__c</fullName>
        <label>Longitude</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MA_Clean_City__c</fullName>
        <label>Clean City (MapAnything)</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MA_Clean_Country__c</fullName>
        <label>Clean Country (MapAnything)</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MA_Clean_County__c</fullName>
        <label>Clean County (MapAnything)</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MA_Clean_District__c</fullName>
        <label>Clean District (MapAnything)</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MA_Clean_Postal_Code__c</fullName>
        <label>Clean Postal Code (MapAnything)</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MA_Clean_State__c</fullName>
        <label>Clean State (MapAnything)</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MA_Clean_Street__c</fullName>
        <label>Clean Street (MapAnything)</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MA_Latitude__c</fullName>
        <label>Latitude (MapAnything)</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MA_Longitude__c</fullName>
        <label>Longitude (MapAnything)</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MA_Quality__c</fullName>
        <label>Quality (MapAnything)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MA_Similarity_Level__c</fullName>
        <label>Similarity Level (MapAnything)</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MA_Zip_Different_from_Primary_Zip__c</fullName>
        <formula>IF(LEFT(MailingPostalCode,2) =  LEFT(MA_Clean_Postal_Code__c,2) , &quot;False&quot;,&quot;True&quot;)</formula>
        <label>MA Zip Different from Primary Zip</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MOS_Military_Job__c</fullName>
        <label>MOS/Military Job</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marital_Status__c</fullName>
        <label>Marital Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Currently Married</fullName>
                </value>
                <value>
                    <fullName>Separated or Divorced</fullName>
                </value>
                <value>
                    <fullName>Widowed</fullName>
                </value>
                <value>
                    <fullName>Never Married</fullName>
                </value>
                <value>
                    <fullName>Living with Partner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Media_Trained__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Has this contact been media trained?</description>
        <inlineHelpText>Has this contact been media trained?</inlineHelpText>
        <label>Media Trained</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Medical_Retirement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Medical Retirement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Member_Categories__c</fullName>
        <description>Semi-colon-separated list of all member categories that apply (Confirmed;Unconfirmed;OtherEra;Family)</description>
        <formula>if ( Veteran_Member_Status__c = &quot;Confirmed&quot;, &quot;Confirmed&quot;, 
  if( CONTAINS(Veteran_Member_Status__c, &quot;Unconfirmed&quot;), &quot;Unconfirmed&quot;, &quot;&quot;)
)
&amp; &quot;;&quot; &amp;
if ( Veteran_of_Other_Era__c , &quot;OtherEra&quot;, &quot;&quot;)
&amp; &quot;;&quot; &amp;
if (  Veteran_Family_Member__c , &quot;Family&quot;, &quot;&quot;)
&amp; &quot;;&quot; &amp;
if ( Not_a_Veteran__c, &quot;Non-veteran&quot;,&quot;&quot;)
&amp; &quot;;&quot; &amp; &quot;Everyone&quot;</formula>
        <inlineHelpText>Semi-colon-separated list of all member categories that apply (Confirmed;Unconfirmed;OtherEra;Family)</inlineHelpText>
        <label>Member Categories</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_Confirmation_Method__c</fullName>
        <formula>IF ( 
    Peer_Confirmed__c = &quot;True&quot; &amp;&amp;(ISPICKVAL(Paperwork_Confirmation__c, &quot;Paperwork Accepted&quot;)),
   &quot;Peer and Paperwork&quot;,
   IF (
      Peer_Confirmed__c = &quot;True&quot;,       
      &quot;Peer Only&quot;,
      IF (
        ISPICKVAL(Paperwork_Confirmation__c, 
            &quot;Paperwork Accepted&quot;), 
        &quot;Paperwork Only&quot;,
          IF (
             Vouch_tally_rollup__c &gt;= 2, 
             &quot;Not yet accepted Nomination&quot;,
             &quot;&quot;
          )
       )
    )
)</formula>
        <label>Member Confirmation Method</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_NumberRetrievals__c</fullName>
        <formula>0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Member Number Retrievals</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Member_Status__c</fullName>
        <label>Member Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Signup</fullName>
                </value>
                <value>
                    <fullName>Documents</fullName>
                </value>
                <value>
                    <fullName>Accepted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Member_of_myIAVA__c</fullName>
        <description>for StepUp</description>
        <formula>OR(NOT( ISBLANK( Accepted_TOS_Date__c ) ), 
NOT( ISBLANK (Portal_User__r.Date_of_COV_Terms_and_Conduct_Acceptance__c )))</formula>
        <label>Member of myIAVA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Membership_Confirmation_Date__c</fullName>
        <label>Membership Confirmation Date</label>
        <type>Date</type>
    </fields>
</CustomObject>